--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,15 +1,18 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "com.fernandocejas.frodo:frodo-plugin:0.8.3"
+    }
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'android-apt'
-
+apply plugin: 'com.fernandocejas.frodo'
 
 android {
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
 
@@ -19,47 +22,49 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        vectorDrawables.useSupportLibrary = true
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
-            minifyEnabled true
-            fileTree(dir: 'proguard-rules', include: ['*.pro']).each { File file ->
-                proguardFile file
-            }
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-        debug {
             minifyEnabled false
-            fileTree(dir: 'proguard-rules', include: ['*.pro']).each { File file ->
-                proguardFile file
-            }
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
+frodo {
+    enabled = true
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
 
-    compile 'com.google.android.gms:play-services-location:9.6.1'
-
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
     compile 'com.jakewharton:butterknife:8.4.0'
-
-    retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.3.0'
-
-    compile 'com.parse:parse-android:1.13.1'
-
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
+    compile 'io.reactivex:rxjava:1.2.1'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile project(path: ':moviper')
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile 'junit:junit:4.12'
 }
