--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mateuszkoslacz.moviper.sample">
+          package="com.mateuszkoslacz.moviper.sample">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name="com.mateuszkoslacz.moviper.sample.SampleApp"
-        android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="com.mateuszkoslacz.moviper.sample.viper.view.activity.SplashActivity"
-            android:noHistory="true"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
+        <activity
+                android:name=".viper.view.activity.ListingActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.mateuszkoslacz.moviper.sample.viper.view.activity.AuthorizationActivity"
-            android:noHistory="true" />
-        <activity android:name="com.mateuszkoslacz.moviper.sample.viper.view.activity.MainActivity" />
+        <activity android:name=".viper.view.activity.UserDetailsActivity"/>
+        <activity android:name=".viper.view.activity.FullscreenPhotoActivity"/>
     </application>
-
 </manifest>
