--- a/moviper/build.gradle
+++ b/moviper/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.2.9'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.hannesdorfmann.mosby:mvp:2.0.1'
     compile 'com.hannesdorfmann.mosby:viewstate:2.0.1'
