--- a/moviper/build.gradle
+++ b/moviper/build.gradle
@@ -15,7 +15,7 @@ android {
     }
 
     compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    buildToolsVersion '25'
 
     defaultConfig {
         minSdkVersion 16
