--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -11,7 +11,7 @@ android {
     }
 
     compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    buildToolsVersion '25'
 
     defaultConfig {
         applicationId "com.mateuszkoslacz.moviper.sample"
