--- a/rxsample/build.gradle
+++ b/rxsample/build.gradle
@@ -13,8 +13,8 @@ apply plugin: 'android-apt'
 apply plugin: 'com.fernandocejas.frodo'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 25
+    buildToolsVersion '25'
 
     defaultConfig {
         applicationId "com.mateuszkoslacz.moviper.rxsample"
@@ -46,9 +46,9 @@ frodo {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
