--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     compile 'io.reactivex:rxjava:1.2.1'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
