--- a/moviper/build.gradle
+++ b/moviper/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'me.tatarka.retrolambda'
 
 
 // This is the library version used when deploying the artifact
-version = "1.0.0"
+version = "1.1.0-alpha"
 
 android {
 
@@ -20,8 +20,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.1.0-aplha"
     }
     buildTypes {
         release {
