--- a/ipcsample/build.gradle
+++ b/ipcsample/build.gradle
@@ -4,10 +4,9 @@ apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25'
+    buildToolsVersion "25"
 
     defaultConfig {
-        applicationId "com.mateuszkoslacz.moviper.sample"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -36,19 +35,11 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
 
-    compile 'com.google.android.gms:play-services-location:9.8.0'
-
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'io.reactivex:rxjava:1.2.1'
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile project(path: ':moviper')
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
