--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
 
     compile 'com.google.android.gms:play-services-location:9.8.0'
 
