--- a/rxsample/build.gradle
+++ b/rxsample/build.gradle
@@ -53,4 +53,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:2.2.19"
 }
