--- a/rxsample/build.gradle
+++ b/rxsample/build.gradle
@@ -53,5 +53,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:2.2.19"
+    testCompile "org.mockito:mockito-core:2.0.42-beta"
+    testCompile 'org.powermock:powermock:1.6.6'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.6'
+    testCompile 'org.powermock:powermock-api-mockito2:1.6.6'
+    testCompile "org.robolectric:robolectric:3.1.4"
 }
