--- a/rxsample/build.gradle
+++ b/rxsample/build.gradle
@@ -57,5 +57,7 @@ dependencies {
     testCompile 'org.powermock:powermock:1.6.6'
     testCompile 'org.powermock:powermock-module-junit4:1.6.6'
     testCompile 'org.powermock:powermock-api-mockito2:1.6.6'
+    testCompile 'org.powermock:powermock-module-junit4-rule:1.6.6'
+    testCompile 'org.powermock:powermock-classloading-xstream:1.6.6'
     testCompile "org.robolectric:robolectric:3.1.4"
 }
