--- a/rxsample/build.gradle
+++ b/rxsample/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.0'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
