--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':sample', ':moviper', ':rxsample', ':ipcsample'
+include ':sample', ':moviper', ':rxpresenter_sample', ':rxsample', ':ipcsample'
