--- a/rxsample/src/main/AndroidManifest.xml
+++ b/rxsample/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:name=".Moviper"
+            android:name=".MoviperApplication"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
