--- a/rxsample/build.gradle
+++ b/rxsample/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile project(path: ':moviper')
 
+    androidTestApt 'com.google.dagger:dagger-compiler:2.7'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
