--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':sample', ':moviper', ':rxsample', ':ipcsample', ':recyclerviewsample'
+include ':moviper', ':sample', ':rxsample', ':ipcsample', ':recyclerviewsample', ':rxpresentersample'
