[rxsample][rxviewstatesample][viewstate][refactor] extract viewstate sample module

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':moviper', ':sample', ':rxsample', ':ipcsample', ':recyclerviewsample', ':rxpresentersample'
+include ':moviper', ':sample', ':rxsample', ':ipcsample', ':recyclerviewsample', ':rxpresentersample', 'rxviewstatesample'
