--- a/build.gradle
+++ b/build.gradle
@@ -30,3 +30,25 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    minSdkVersion = 16
+    targetSdkVersion = 25
+    compileSdkVersion = 25
+    buildToolsVersion = '25.0.2'
+    supportVersion = '25.1.0'
+    mosbyVersion = '2.0.1'
+    rxJavaVersion = '1.2.3'
+    rxAndroidVersion = '1.2.1'
+    butterKnifeVersion = '8.4.0'
+    retrofitVersion = '2.0.2'
+    okHttpVersion = '3.2.0'
+    glideVersion = '3.7.0'
+    powermockVersion = '1.6.6'
+    robolectricVersion = '3.2-rc1'
+    junitVersion = '4.12'
+    mockitoVersion = '2.5.4'
+    espressoVersion = '2.2.2'
+    openglApiVersion = 'gl1.1-android-2.1_r1'
+    kotlinVersion = '1.0.6'
+}
