[samples][modules-split] fix: change sample moviper deps to splitted ones

--- a/sample-rx-viewstate/build.gradle
+++ b/sample-rx-viewstate/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:'+rootProject.ext.retrofitVersion
     compile 'com.squareup.retrofit2:adapter-rxjava:'+rootProject.ext.retrofitVersion
     compile 'com.squareup.okhttp3:logging-interceptor:'+rootProject.ext.okHttpVersion
-    compile project(path: ':moviper')
+    compile project(path: ':moviper-rx')
+    compile project(path: ':moviper-rx-viewhelper')
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:' + rootProject.ext.espressoVersion, {
         exclude group: 'com.android.support', module: 'support-annotations'
