--- a/sample-super-rx-ai-kotlin/build.gradle
+++ b/sample-super-rx-ai-kotlin/build.gradle
@@ -43,8 +43,11 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:' + rootProject.ext.retrofitVersion
     compile 'com.squareup.retrofit2:adapter-rxjava:' + rootProject.ext.retrofitVersion
     compile 'com.squareup.okhttp3:logging-interceptor:' + rootProject.ext.okHttpVersion
-    compile project(path: ':moviper')
-
+    compile project(path: ':moviper-rx')
+    compile project(path: ':moviper-rx-viewhelper')
+    compile project(path: ':moviper-passive-views')
+    compile project(path: ':moviper-ai-views')
+    compile project(path: ':moviper-presentersdispatcher')
     androidTestCompile('com.android.support.test.espresso:espresso-core:' + rootProject.ext.espressoVersion, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
