--- a/sample-ipc-ai/build.gradle
+++ b/sample-ipc-ai/build.gradle
@@ -7,6 +7,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
+        applicationId "com.mateuszkoslacz.moviper.sample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -40,7 +41,9 @@ dependencies {
 
     compile 'io.reactivex:rxjava:' + rootProject.ext.rxJavaVersion
     compile 'io.reactivex:rxandroid:' + rootProject.ext.rxAndroidVersion
-    compile project(path: ':moviper')
+    compile project(path: ':moviper-rx')
+    compile project(path: ':moviper-ipc')
+    compile project(path: ':moviper-ai-butterknife-views')
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:' + rootProject.ext.espressoVersion, {
         exclude group: 'com.android.support', module: 'support-annotations'
