--- a/sample-ipc/build.gradle
+++ b/sample-ipc/build.gradle
@@ -7,6 +7,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
+        applicationId "com.mateuszkoslacz.moviper.sample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
