--- a/sample-rx-presenter/build.gradle
+++ b/sample-rx-presenter/build.gradle
@@ -12,6 +12,7 @@ android {
     }
 
     defaultConfig {
+        applicationId "com.mateuszkoslacz.moviper.sample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -45,7 +46,7 @@ dependencies {
 
     retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.3.0'
 
-    compile project(path: ':moviper')
+    compile project(path: ':moviper-rx')
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:' + rootProject.ext.espressoVersion, {
         exclude group: 'com.android.support', module: 'support-annotations'
