--- a/moviper/build.gradle
+++ b/moviper/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     })
     testCompile 'junit:junit:' + rootProject.ext.junitVersion
     testCompile 'org.mockito:mockito-core:' + rootProject.ext.mockitoVersion
+    testCompile 'org.robolectric:robolectric:' + rootProject.ext.robolectricVersion
     compile 'com.android.support:appcompat-v7:' + rootProject.ext.supportVersion
     compile 'com.android.support:recyclerview-v7:' + rootProject.ext.supportVersion
     compile 'com.hannesdorfmann.mosby:mvp:' + rootProject.ext.mosbyVersion
