--- a/moviper-test/build.gradle
+++ b/moviper-test/build.gradle
@@ -29,6 +29,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'io.reactivex:rxjava:' + rootProject.ext.rxJavaVersion
+    compile 'io.reactivex:rxandroid:' + rootProject.ext.rxAndroidVersion
+
     compile 'junit:junit:4.12'
     compile project(':moviper')
 }
