[moviper-test] fix: ViewHolderInstrumentedTestRule manifest import

--- a/moviper-test/src/main/AndroidManifest.xml
+++ b/moviper-test/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <application>
         <activity android:name=".views.TestActivity"
                   android:theme="@style/Theme.AppCompat"/>
+        <activity android:name=".views.ViewHolderInstrumentedTestActivity"/>
     </application>
 
 </manifest>
