[gradle][dependency] fix: extracting dependencies version numbers to variables

--- a/build.gradle
+++ b/build.gradle
@@ -40,14 +40,23 @@ ext {
     mosbyVersion = '2.0.1'
     rxJavaVersion = '1.2.3'
     rxAndroidVersion = '1.2.1'
+    rxBindingVersion = '1.0.0'
     butterKnifeVersion = '8.4.0'
     retrofitVersion = '2.0.2'
     okHttpVersion = '3.2.0'
     glideVersion = '3.7.0'
     robolectricVersion = '3.2-rc1'
+    robolectricShadowsSupportV3Version = '3.0'
     junitVersion = '4.12'
     mockitoVersion = '2.5.4'
     espressoVersion = '2.2.2'
     openglApiVersion = 'gl1.1-android-2.1_r1'
     kotlinVersion = '1.0.6'
+    picassoVersion = '2.5.2'
+    adapterdelegates3Version = '3.0.0'
+    leakCanaryVersion = '1.5'
+    retrolambdaVersion = '2.3.0'
+    daggerVersion = '2.7'
+    jsr250ApiVersion = '1.0'
+    kotlinVersion = kotlin_version
 }
