--- a/moviper-test/build.gradle
+++ b/moviper-test/build.gradle
@@ -25,13 +25,13 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    compile('com.android.support.test.espresso:espresso-core:' + rootProject.ext.espressoVersion, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:appcompat-v7:' + rootProject.ext.supportVersion
     compile 'io.reactivex:rxjava:' + rootProject.ext.rxJavaVersion
     compile 'io.reactivex:rxandroid:' + rootProject.ext.rxAndroidVersion
 
-    compile 'junit:junit:4.12'
+    compile 'junit:junit:' + rootProject.ext.junitVersion
     compile project(':moviper')
 }
