--- a/sample-rx/build.gradle
+++ b/sample-rx/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     compile 'com.android.support:support-v4:' + rootProject.ext.supportVersion
 
     compile 'com.github.bumptech.glide:glide:' + rootProject.ext.glideVersion
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.picasso:picasso:' + rootProject.ext.picassoVersion
 
     compile 'com.jakewharton:butterknife:' + rootProject.ext.butterKnifeVersion
     apt 'com.jakewharton:butterknife-compiler:' + rootProject.ext.butterKnifeVersion
