--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ task clean(type: Delete) {
 }
 
 ext {
+    releaseVersionCode = 4
+    releaseVersionName = '1.3.0-alpha'
+
     minSdkVersion = 16
     targetSdkVersion = 25
     compileSdkVersion = 25
