[sample-rx-rdp] fix: temporary add multidex

--- a/sample-rx-rdp/build.gradle
+++ b/sample-rx-rdp/build.gradle
@@ -11,6 +11,7 @@ android {
         applicationId "com.mateuszkoslacz.moviper.rxsample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
 
