--- a/moviper-common/build.gradle
+++ b/moviper-common/build.gradle
@@ -1,14 +1,19 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: "com.jfrog.bintray"
+
+// This is the library version used when deploying the artifact
+version = rootProject.ext.releaseVersionName
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.releaseVersionCode
+        versionName rootProject.ext.releaseVersionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -30,3 +35,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:' + rootProject.ext.supportVersion
     compile 'com.hannesdorfmann.mosby:mvp:' + rootProject.ext.mosbyVersion
 }
+
+def submoduleName = 'common'
+def projectFullName = "$rootProject.ext.groupNameAndArtifactPrefix$submoduleName"
+
+install.repositories.mavenInstaller.pom.project {
+    name = projectFullName
+    description = 'The common Moviper module'
+}
+bintray.pkg.name = projectFullName
+
+apply from: '../upload.gradle'
