--- a/moviper-test/build.gradle
+++ b/moviper-test/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: "com.jfrog.bintray"
-apply plugin: 'me.tatarka.retrolambda'
 
 // This is the library version used when deploying the artifact
 version = rootProject.ext.releaseVersionName
@@ -14,6 +14,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -44,96 +45,13 @@ dependencies {
     compile project(path: ':moviper-recyclerview') // TODO to be splitted!
 }
 
+def submoduleName = 'test-utils'
+def projectFullName = "$rootProject.ext.groupNameAndArtifactPrefix$submoduleName"
 
-
-def siteUrl = 'https://github.com/mkoslacz/Moviper'      // Homepage URL of the library
-def gitUrl = 'https://github.com/mkoslacz/Moviper.git'   // Git repository URL
-group = "com.mateuszkoslacz.moviper"                     // Maven Group ID for the artifact
-
-install {
-    repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
-        pom {
-            project {
-                packaging 'aar'
-
-                // Add your description here
-                name 'com.mateuszkoslacz.moviper:moviper-test-utils'
-                description = 'A test utils library for Moviper'
-                url siteUrl
-
-                // Set your license
-                licenses {
-                    license {
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-                developers {
-                    developer {
-                        id 'mkoslacz'
-                        name 'Mateusz Koslacz'
-                        email 'mateusz.koslacz@gmail.com'
-                    }
-                }
-                scm {
-                    connection gitUrl
-                    developerConnection gitUrl
-                    url siteUrl
-                }
-            }
-        }
-    }
+install.repositories.mavenInstaller.pom.project {
+    name = projectFullName
+    description = 'The test utils for Moviper'
 }
+bintray.pkg.name = projectFullName
 
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
-
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-
-afterEvaluate {
-    javadoc.classpath += files(android.libraryVariants.collect { variant ->
-        variant.javaCompile.classpath.files
-    })
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-artifacts {
-    archives javadocJar
-    archives sourcesJar
-}
-
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-
-// https://github.com/bintray/gradle-bintray-plugin
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-
-    configurations = ['archives']
-    pkg {
-        repo = "Moviper"
-        // it is the name that appears in bintray when logged
-        name = "com.mateuszkoslacz.moviper:moviper-test-utils"
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = ["Apache-2.0"]
-        publish = true
-        version {
-            gpg {
-                sign = true //Determines whether to GPG sign the files. The default is false
-                passphrase = properties.getProperty("bintray.gpg.password")
-                //Optional. The passphrase for GPG signing'
-            }
-        }
-    }
-}
+apply from: '../upload.gradle'
