[gradle] fix: change moviper3 from android-app to android-library

--- a/moviper3/build.gradle
+++ b/moviper3/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
     defaultConfig {
-        applicationId "com.mateuszkoslacz.moviper3"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
